--- a/front/m1p9mean-mahery/src/app/pages/login/login.component.html
+++ b/front/m1p9mean-mahery/src/app/pages/login/login.component.html
@@ -29,16 +29,16 @@
                         <h4 class="text-muted font-18 m-b-5 text-center">Tongasoa tompoko !</h4>
                         <p class="text-muted text-center">Manasa anao handroso ato amin'ny tranokala .</p>
 
-                        <form class="form-horizontal m-t-30" action="index.html">
+                        <form [formGroup]="loginForm" class="form-horizontal m-t-30" (ngSubmit)="login()">
 
                             <div class="form-group">
                                 <label for="username">Email</label>
-                                <input type="text" class="form-control" id="username" placeholder="Tapez votre addresse mail">
+                                <input type="email" formControlName="login" class="form-control" id="username" placeholder="Tapez votre addresse mail">
                             </div>
 
                             <div class="form-group">
                                 <label for="userpassword">Mot de passe</label>
-                                <input type="password" class="form-control" id="userpassword" placeholder="Tapez votre mot de passe">
+                                <input type="password" formControlName="password" class="form-control" id="userpassword" placeholder="Tapez votre mot de passe">
                             </div>
 
                             <div class="form-group row m-t-20">
@@ -46,18 +46,20 @@
                                     <div class="custom-control custom-checkbox">
                                         <!-- <input type="checkbox" class="custom-control-input" id="customControlInline">
                                         <label class="custom-control-label" for="customControlInline">Remember me</label> -->
-                                    </div>
+                                    </div>  
                                 </div>
                                 <div class="col-6 text-right">
-                                    <button class="btn btn-primary w-md waves-effect waves-light" type="submit">Se connecter</button>
+                                    <button class="btn btn-primary w-md waves-effect waves-light">Se connecter</button>
                                 </div>
                             </div>
 
-                            <div class="form-group m-t-10 mb-0 row">
+                            <ng-http-loader></ng-http-loader>
+
+                            <!-- <div class="form-group m-t-10 mb-0 row">
                                 <div class="col-12 m-t-20">
                                     <a href="pages-recoverpw.html" class="text-muted"><i class="mdi mdi-lock"></i> Forgot your password?</a>
                                 </div>
-                            </div>
+                            </div> -->
                         </form>
                     </div>
 
